# data-analysis-agent

./: .gitignore  CONFLUENCE_MCP_SETUP.md  FIXES_IMPLEMENTED.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  ROOT_CAUSE_ANALYSIS.md  SETUP.md  TROUBLESHOOTING_CONFLUENCE.md  agent_workflow.mmd  architecture_diagram.md  check_confluence_config.py  eval_history.json  eval_report.json  example_usage.py  generate_workflow_diagram.py  gp_products_monthly_final.csv  gp_products_summary_final.csv  langgraph.json  main.py  model_summary.json  pyproject.toml  requirements.txt  run_mcp_server.py  test_confluence_mcp.py  upgrade_pyarrow.sh
.github/workflows/: eval.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agent/: __init__.py  graph.py  prompts.py
agent/tools/: execution.py  schema.py
app/: __init__.py  ui.py
confluence_mcp_server/: README.md  __init__.py  confluence_tools.py  server.py
data/: chugai_pharama_r_and_d_terms.xlsx  jamdas_patient_data.csv  jpm_patient_data.csv  mr_activity_data.csv  ~$chugai_pharama_r_and_d_terms.xlsx
eval/: README.md  __init__.py  langgraph_client.py  metrics.py  plot_eval_history.py  prompts.py  run_eval.py  schema.py  update_history.py
eval/cases/: basic_capabilities.yaml  basic_capabilities_with_metrics.yaml  chugai_definition.yaml  covid_regression_model.yaml  json_score.yaml  patient_experience_survey_definition.yaml  plot_generation.yaml
scripts/: wait_for_http.py
src/: __init__.py  generate_workflow_diagram.py  main.py
src/agent/: graph.py
src/app/: ui.py
src/langgraph_server/: __init__.py  __main__.py  generate_diagram.py  graph.py  langgraph.json  llm_utils.py  llm_wrappers.py  mcp_tool_loader.py  prompts.py  settings.py
src/mcp_server/: __init__.py  __main__.py  analysis_tools.py  dataset_store.py  datasets_registry.py  document_store.py  knowledge_index.py  knowledge_registry.py  knowledge_tools.py  schema.py  server.py  settings.py  utils.py
(+93 files in other folders)
