[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain>=1.0.7",
    "langchain-core>=1.0.5",
    "langchain-openai>=1.0.3",
    "langgraph>=0.0.20",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "streamlit>=1.51.0",
]
