[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "fastmcp>=2.12.4",
    "ipykernel>=7.1.0",
    "langchain>=1.0.7",
    "langchain-core>=1.0.5",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=1.0.3",
    "langgraph>=0.0.20",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "torch>=2.0.0",
    "prophet>=1.1.5",
    "pmdarima>=2.0.4",
    "arch>=6.2.0",
    "pydantic-settings>=2.0.0",
    "streamlit>=1.51.0",
    "requests>=2.32.0",
    "langgraph-cli>=0.2.0",
    "s3fs>=2024.2.0",
    "boto3>=1.28.0", # Flexible version for fallback S3 access; s3fs manages botocore version
    "pypdf>=3.0.0", # For PDF text extraction
    "sentence-transformers>=2.2.0", # For embeddings (optional, falls back to TF-IDF)
    "openpyxl>=3.0.0", # For Excel file reading
]
